--- a/src/login.css
+++ b/src/login.css
@@ -1,28 +1,116 @@
-/* LoginPage.css */
-.login-page {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100vh;
-    background-color: #f5f5f5;
+
+  /* Reset CSS */
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
-.login-page form {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    gap: 20px;
+/* Body styles */
+body {
+  font-family: Arial, sans-serif;
+  background-color: #fff7ee;
 }
 
-.login-page input[type="text"] {
-    padding: 10px;
-    width: 200px;
+/* Header styles */
+.header {
+  display: flex; /* Use flexbox layout */
+  align-items: center; /* Align items vertically in the center */
+  padding: 20px; /* Add padding for spacing */
 }
 
-.login-page input[type="submit"] {
-    padding: 10px 20px;
-    background-color: #4CAF50;
-    color: white;
-    border: none;
-    cursor: pointer;
+.head-ing{
+  font-size: 54px;
+  padding: auto;
+  font-weight: bold;
+  color: #333333;
+
 }
+
+.logo-img {
+  width: 100px; /* Adjust the width as needed */
+  height: auto; /* Maintain aspect ratio */
+  /* margin-right: 2px;  */
+}
+
+/* Login container */
+.login-container {
+  max-width: 400px;
+  margin: 0 auto;
+  background-color: #f0f0f0; /* Light gray background */
+  padding: 30px; /* Increase padding for a more modern look */
+  border-radius: 10px; /* Rounded corners */
+  box-shadow: 0 0 20px rgba(0, 0, 0, 0.1); /* Box shadow for depth */
+}
+
+/* Login form */
+.login-form {
+  display: flex;
+  flex-direction: column;
+}
+
+/* Form labels */
+.login-form label {
+  margin-bottom: 10px;
+  color: #333; /* Darker text color */
+}
+
+/* Form inputs */
+.login-form input {
+  padding: 12px;
+  margin-bottom: 20px;
+  border: 1px solid #ccc;
+  border-radius: 6px;
+  font-size: 16px;
+}
+
+/* Form buttons */
+.login-form button {
+  padding: 12px 20px;
+  margin-top: 20px;
+  background-color:  #c700ff; /* Omegle button color #3578e5 */
+  color: #fff;
+  border: none;
+  border-radius: 6px;
+  font-size: 16px;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+}
+
+.login-form button:hover {
+  background-color:  #c700ff; /* Darker color on hover */
+}
+
+/* Error message */
+.error-message {
+  color: red;
+  margin-top: 10px;
+}
+
+/* Registration link */
+.registration-link {
+  text-align: center;
+  margin-top: 20px;
+}
+
+.registration-link a {
+  color: blue;
+  text-decoration: none;
+}
+
+.registration-link a:hover {
+  text-decoration: underline;
+}
+
+/* Responsive styles */
+@media only screen and (max-width: 600px) {
+  .login-container {
+      max-width: 90%; /* Adjust maximum width for smaller screens */
+  }
+
+  .header {
+      flex-direction: column; /* Stack header items vertically on smaller screens */
+      align-items: center; /* Align items horizontally in the center */
+  }
+}
+
